--- a/style.css
+++ b/style.css
@@ -1,44 +1,88 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Verdana;
+    
 }
-body{
+body {
     max-width: 414px;
     max-height: 100%;
 }
 
+
+
 /* upeer menu */
+.header {
+
+}
 .upper_menu {
+    width: 414px;
     height: auto;
     position: fixed;
+    height: auto;
     column-count: 3;
-    
 }
 
 .logo {
-    
+    padding: 4px 0px 0px 0px;
 }
 .logo img {
-max-width: 150px;
-max-height: auto;
+    max-width: 150px;
+    max-height: auto;
 }
 .new_post {
+    width: 35px;
+    height: 35px;
+    padding: 10px 0px 0px 179px;
     
 }
 .new_post img {
-max-width: 35px;
+    max-width: 35px;
 }
 .message {
-    
+    width: 35px;
+    height: 35px;
+    padding: 10px 0px 0px 79px;
 }
 .message img {
-max-width: 35px;
-}
-
-
+    max-width: 35px;
+    }
 /* upeer menu */
 
-/*buttom menu*/
 
-/* buttom menu */
+
+/* bottom menu */
+.footer {
+
+}
+.bottom_menu {
+    position: fixed;
+    height: auto;
+    column-count: 5;
+    padding-top: 100px;
+}
+.home {
+    width: 35px;
+    height: 35px;
+
+}
+.search {
+    width: 35px;
+    height: 35px;
+
+}
+.story {
+    width: 35px;
+    height: 35px;
+
+}
+.activity {
+    width: 35px;
+    height: 35px;
+
+}
+.profile {
+    width: 35px;
+    height: 35px;
+
+}
+/* bottom menu */
