--- a/style.css
+++ b/style.css
@@ -93,7 +93,93 @@ body {
 }
 /*  stori */
 
-
+/*  post  */
+.container {
+    width: 100%;
+}
+.publs {
+}
+.fl {
+    display: flex;
+}
+.fl-wrap {
+    flex-wrap: wrap;
+}
+.publ__item {
+    width: 100%;
+}
+.fl-col {
+    display: flex;
+    flex-direction: column;
+}
+.fl-ai-c {
+    align-items: center;
+}
+.publ__header {
+    margin-right: auto;
+    margin-left: 15px;
+    height: 70px;
+    border-bottom: 1px solid #e6e6e6;
+}
+.fl-jc-c {
+    justify-content: center;
+}
+.avatars {
+    border-radius: 100%;
+    height: 50px;
+}
+.info {
+    margin-left: 10px;
+    width: 75%;
+}
+.login {
+    font-size: 13px;
+    font-weight: 600;
+    color: #262626;
+    margin-bottom: 5px;
+}
+.place {
+    font-size: .7em;
+}
+.publ__photo {
+    object-fit: contain;
+}
+.publ__photo img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+.wrapper {
+    width: 95%;
+    margin-left: 15px;
+}
+.publ__actions {
+    width: 21%;
+    margin: 5px 0;
+}
+.fl-jc-sb {
+    justify-content: space-between;
+}
+.fal {
+}
+.fa-2x {
+}
+.publ__like {
+    margin: 10px 0;
+    font-size: .9em;
+    font-weight: bold;
+}
+.description {
+}
+.time {
+    font-size: .7em;
+    color: #999;
+}
+.publ__footer {
+    height: 30px;
+    border-bottom: 1px solid #e6e6e6;
+}
+/*  post  */
 
 /*  bottom menu */
 .footer {
